--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "vue-cli-service lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "happo": "happo"
+    "happo": "happo",
+    "happo-ci": "happo-ci"
   },
   "dependencies": {
     "core-js": "^3.6.4",
