--- a/.github/workflow/Happo.yml
+++ b/.github/workflow/Happo.yml
@@ -1,12 +1,17 @@
-name: Happo
+# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+
+name: Happo CI
 
 on:
+  push:
+    branches: [ master ]
   pull_request:
-    branches:
-      - master
-      - feature/**
+    branches: [ master ]
+
 jobs:
-  build:
+  happo:
+
     runs-on: ubuntu-latest
 
     env:
@@ -16,13 +21,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 8.x
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm install
+          node-version: 8.x
+      - run: npm ci
       - run: npm run build --if-present
       - run: npm run happo-ci
         env:
           CI: true
-
