modify component, workflow

--- a/.github/workflows/Happo.yml
+++ b/.github/workflows/Happo.yml
@@ -4,23 +4,26 @@
 name: Happo CI
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
 jobs:
   happo:
-
     runs-on: ubuntu-latest
 
     env:
       PREVIOUS_SHA: ${{ github.event.pull_request.base.sha }}
       CURRENT_SHA: ${{ github.event.pull_request.head.sha }}
       CHANGE_URL: ${{ github.event.pull_request.html_url }}
+      HAPPO_API_KEY: ${{ secrets.HAPPO_API_KEY }}
+      HAPPO_API_SECRET: ${{ secrets.HAPPO_API_SECRET}}
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
       - name: Use Node.js 8.x
         uses: actions/setup-node@v1
         with:
