modify happo workflow

--- a/.github/workflows/Happo.yml
+++ b/.github/workflows/Happo.yml
@@ -10,7 +10,19 @@ on:
 
 jobs:
   happo:
+    runs-on: ubuntu-latest
+
     env:
       PREVIOUS_SHA: ${{ github.event.pull_request.base.sha }}
       CURRENT_SHA: ${{ github.event.pull_request.head.sha }}
       CHANGE_URL: ${{ github.event.pull_request.html_url }}
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 8.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 8.x
+      - run: npm run happo-ci
+        env:
+          CI: true
